--- a/public/health_metric_vis_params.html
+++ b/public/health_metric_vis_params.html
@@ -18,6 +18,16 @@
     </div>
   </div>
 
+   <!-- show Value -->
+  <div class="kuiSideBarFormRow">
+    <label class="kuiSideBarFormRow__label" for="showValue">
+      Show Value
+    </label>
+    <div class="kuiSideBarFormRow__control">
+      <input class="kuiCheckBox" id="showValue" type="checkbox" ng-model="vis.params.metric.value.show">
+    </div>
+  </div>
+
   <!-- Style -->
   <div>
     <div class="kuiSideBarCollapsibleTitle">
